# mrv-carbon-monitoring-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  requirements.txt
dashboard/: app.py  loaders.py
data/demo/: coverage_summary.csv  crop_phases.csv  s1_backscatter.csv  spectral_indices.csv
docs/decisions/: 01-packaging-approach.md
docs/reports/: 01-milestone-one-report.en.md  01-milestone-one-report.vi.md  02-first-live-run-report.en.md  02-first-live-run-report.vi.md  03-sar-findings-report.en.md  03-sar-findings-report.vi.md
docs/setup/: gee_setup.md
docs/specs/: 00-project-overview.md  01-data-collection.md  02-features.md  03-live-integration-run.md  04-clear-fraction-none-handling.md  05-clear-fraction-measures-cloud.md  06-baseline.md  07-sentinel1-sar.md  08-dashboard.md
notebooks/: explore_bac_ninh_aoi.py
src/mrv/baseline/: detect.py
src/mrv/data_collection/: aoi.py  collect.py  gee_client.py  sentinel1.py  sentinel2.py
src/mrv/features/: backscatter.py  compute.py  indices.py  zonal.py
src/mrv/pipeline/: recon.py  recon_sar.py
src/mrv/utils/: config.py
tests/integration/: test_collect_to_compute.py
tests/unit/baseline/: test_detect.py
tests/unit/dashboard/: test_app_smoke.py  test_loaders.py
tests/unit/data_collection/: test_aoi.py  test_collect.py  test_gee_client.py  test_sentinel1.py  test_sentinel2.py
tests/unit/features/: test_backscatter.py  test_compute.py  test_indices.py  test_zonal.py
tests/unit/pipeline/: test_recon.py  test_recon_sar.py
tests/unit/utils/: test_config.py
(+1 files in other folders)
